fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 :root {
+  margin:0;
+  padding:0;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -27,6 +29,7 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
+  padding: 0;
 }
 
 h1 {
